--- a/valentine/src/components/MainPage/Buttons/Buttons.module.css
+++ b/valentine/src/components/MainPage/Buttons/Buttons.module.css
@@ -6,8 +6,8 @@
 
 .yes,
 .no {
-  height: 30px;
-  width: 50px;
+  min-height: 2rem;
+  min-width: 50px;
   text-align: center;
   cursor: pointer;
   border-radius: 5px;
