--- a/valentine/src/components/MainPage/Buttons/Buttons.module.css
+++ b/valentine/src/components/MainPage/Buttons/Buttons.module.css
@@ -6,20 +6,23 @@
 
 .yes,
 .no {
-  min-height: 2rem;
-  min-width: 50px;
   text-align: center;
   cursor: pointer;
   border-radius: 5px;
   border: none;
+  outline: none;
 }
 
 .yes {
   background-color: var(--peachpuff);
+  min-height: 2rem;
+  min-width: 50px;
 }
 
 .no {
   background-color: var(--navajowhite);
+  /* height: 2rem;
+  width: 50px; */
 }
 
 button:active {
