--- a/valentine/src/components/MainPage/Buttons/Buttons.module.css
+++ b/valentine/src/components/MainPage/Buttons/Buttons.module.css
@@ -27,3 +27,11 @@ button:active {
   top: 4px;
   box-shadow: #e74c3c 0px 3px 2px, #000 0px 3px 5px;
 }
+
+/* MEDIA QUERIES */
+
+@media (width < 370px) {
+  .container > * {
+    display: block;
+  }
+}
