--- a/valentine/src/components/MainPage/Buttons/Buttons.module.css
+++ b/valentine/src/components/MainPage/Buttons/Buttons.module.css
@@ -1,7 +1,5 @@
 .container {
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
+  display: block;
 }
 
 .yes,
@@ -21,17 +19,10 @@
 
 .no {
   background-color: var(--navajowhite);
+  margin-left: 2rem;
 }
 
 button:active {
   top: 4px;
   box-shadow: #e74c3c 0px 3px 2px, #000 0px 3px 5px;
-}
-
-/* MEDIA QUERIES */
-
-@media (width < 370px) {
-  .container > * {
-    display: block;
-  }
 }
