update handleClick to set the size of buttons in specific parts of the message list. Create 'Phrase.module.css'

--- a/valentine/src/components/MainPage/BearAlone/BearAlone.module.css
+++ b/valentine/src/components/MainPage/BearAlone/BearAlone.module.css
@@ -1,4 +1,12 @@
 .image {
   height: 200px;
   border-radius: 50%;
+  width: auto;
+}
+
+@media (max-width: 330px) {
+  .image {
+    max-width: 80%;
+    height: auto;
+  }
 }
