--- a/valentine/src/components/MainPage/Buttons/Buttons.module.css
+++ b/valentine/src/components/MainPage/Buttons/Buttons.module.css
@@ -1,5 +1,8 @@
 .container {
-  display: block;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .yes,
@@ -9,17 +12,36 @@
   border-radius: 5px;
   border: none;
   outline: none;
+  padding: 0.5rem 1rem;
+  margin: 0.5rem;
 }
 
 .yes {
   background-color: var(--peachpuff);
   min-height: 2rem;
   min-width: 50px;
+  font-size: clamp(1rem, 2.5vw, 2rem);
 }
 
 .no {
   background-color: var(--navajowhite);
-  margin-left: 2rem;
+  font-size: clamp(1rem, 2vw, 1.5rem);
+  text-align: center;
+}
+
+@media (max-width: 300px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .yes,
+  .no {
+    width: auto;
+    margin: 0.5rem 0;
+    font-size: clamp(0.9rem, 4vw, 1.5rem);
+    padding: 0.5rem;
+  }
 }
 
 button:active {
